/*
 * Copyright 2016 Google, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
 1. syntax, package, option, enum
 */
syntax = "proto3";
option java_multiple_files = true;
package org.grpc.proto;
/*
 2. request
 */
message UserEntity {
    int64 id = 1;
    string name = 2;
    string email = 3;
    string addres = 4;
    string password = 5;
}
message Users {
    repeated UserEntity userEntity = 1;
}
message JwtUser {
    int64 id = 1;
    string token = 2;
    string name = 3;
}
message QueryParams {
    int32 page = 1;
}
message StreamFromClient {
    string message = 1;
}
/*
 3. response
 */

/*
 4. service
 */

service UserService {
    rpc login (UserEntity) returns (JwtUser);
    rpc register (UserEntity) returns (UserEntity);
    rpc listUsers (QueryParams) returns (Users);
    rpc streamUsers (QueryParams) returns (stream UserEntity);
    rpc streamRegistration (stream UserEntity) returns (StreamFromClient);
    rpc streamBidirectional (stream UserEntity) returns (stream UserEntity);
}